# fie_lonet_switch

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
design/: overview.md
fie_lonet_switch/: cli.py  database.py  switcher.py  tray.py  tray_entry.py  tray_mac.py
